<resources>
    <string name="app_name">PixabayPayback</string>

    <string name="error_network">Please check your Internet Connection.</string>
    <string name="error_unexpected_message">Something went wrong, please try again.</string>
    <string name="error_timeout_message">Timeout reached, please try again.</string>
    <string name="error_server_message">Unable to connect to server, please try again.</string>
    <string name="error_client_message">Sorry, Unable to connect, please try again.</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Type the image you want to search</string>
    <string name="text_empty_placeholder">No Results Found</string>
    <string name="error_loading_images">There was an error loading the images,\nplease check your internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="retry">Retry</string>
    <string name="text_see_details">Do you want to see the details?</string>
    <string name="text_yes">Yes</string>
    <string name="text_cancel">Cancel</string>
</resources>